--- a/ReactRandomJokes.Web/appsettings.json
+++ b/ReactRandomJokes.Web/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConStr": "Data Source=.\\sqlexpress;Initial Catalog=RJokesForFun;Integrated Security=true;"
+    "ConStr": "Data Source=.\\sqlexpress;Initial Catalog=RJokesForFun!!!!;Integrated Security=true;"
   }
 }
